[gd_scene load_steps=4 format=3 uid="uid://dn0qob2ptv70s"]

[ext_resource type="FontFile" uid="uid://by3kquboighkq" path="res://fonts/Gothica-Bold.ttf" id="1_cokvt"]
[ext_resource type="Script" path="res://scripts/UI/tela_game_over.gd" id="1_yy5r8"]
[ext_resource type="Texture2D" uid="uid://wfvqygn8f4n8" path="res://sprites/Sprites/OIP.jpg" id="3_0cyhb"]

[node name="TelaGameOver" type="Node2D"]
script = ExtResource("1_yy5r8")

[node name="GameOverPanel" type="Panel" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 599.0
offset_top = 372.0
offset_right = 599.0
offset_bottom = 372.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -112.0
offset_top = -178.0
offset_right = 192.0
offset_bottom = -123.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("1_cokvt")
theme_override_font_sizes/font_size = 40
text = "GAME OVER"

[node name="VBoxContainer" type="VBoxContainer" parent="GameOverPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.568
anchor_right = 0.5
anchor_bottom = 0.568
offset_left = -192.0
offset_top = -88.064
offset_right = 192.0
offset_bottom = 79.936
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="TryAgain" type="Button" parent="GameOverPanel/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme_override_fonts/font = ExtResource("1_cokvt")
theme_override_font_sizes/font_size = 30
text = "TENTAR NOVAMENTE"

[node name="Menu" type="Button" parent="GameOverPanel/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme_override_fonts/font = ExtResource("1_cokvt")
theme_override_font_sizes/font_size = 30
text = "MENU"

[node name="Oip" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(606, 356)
scale = Vector2(2.66745, 2.76242)
texture = ExtResource("3_0cyhb")

[connection signal="pressed" from="GameOverPanel/VBoxContainer/TryAgain" to="." method="_on_try_again_pressed"]
[connection signal="pressed" from="GameOverPanel/VBoxContainer/Menu" to="." method="_on_menu_pressed"]
